            Intervention_Steering_Proto_256.png
            intervention.xml
        menu/
            ResearcherMenu.xml
            DataSelectionMenu.xml

Changed:
  src/
      libs/
        robottools/
            rtHumanDriver.cpp
                included Recorder.h
                included ConfigEnums.h
                changed new_race()
                changed common_drive()
    main/
        main.cpp
    interfaces/
        playerpref.h
            added HM_ADRV_FILE define
    modules/
        racing/standardgame
            racesituation.cpp
                change deltaTime to be constant value
        userinterface/
            legacymenu.h 
                  ActivateResearcherMenu()
            legacymenu.cpp
                  included "ResearcherMenu.h"
                  included "DataSelectionMenu.h"
                  added    ActivateResearcherMenu()
                  changed  backLoad()
                  changed  activate()
            racestopmenu.cpp
                RmStopRaceMenu()
                    changed  AssistedHuman is a human
            legacymenu/CMakeList.txt
                  added    ResearcherMenu.h and .cpp
                  added    DataSelectionMenu.h and .cpp
                  added    backend in both ADD_SDLIB_LIBRARY and ADD_SDLIB_INCLUDEDIR
                racescreens/
                    racerunningmenus.cpp
                        removed RmProgressiveTimeModifier implementation and calls
                    racestopmenu.cpp
                        removed rmProgressiveTimeModifier.start() call
        graphic/
            ssggraph/
                grboard.cpp
                    added   grDispIntervention()
                    changed grInitBoardCar() 
                    changed refreshBoard()
                    added   member interventionTexture
                grboard.h
                    added grDispIntervention() 



  data/
    data/CMakeLists.txt
        added intervention folder
        