@@ -3,6 +3,7 @@ INCLUDE(../../../cmake/macros.cmake)
 #PROJECT(robottools)
 
 ADD_INTERFACE_INCLUDEDIR()
+# SIMULATED DRIVING ASSISTANCE: added backend and frontend
 ADD_SDLIB_INCLUDEDIR(portability tgf math tgfclient backend frontend)
 
 IF(OPTION_SDL2)
@@ -39,6 +40,7 @@ SD_ADD_LIBRARY(robottools SHARED ${ROBOTTOOLS_SOURCES} ${ROBOTTOOLS_HEADERS})
 
 ADD_PLIB_LIBRARY(robottools sg ul)
 
+# SIMULATED DRIVING ASSISTANCE: added backend and frontend
 ADD_SDLIB_LIBRARY(robottools portability tgf tgfclient backend frontend)
 
 IF(WIN32)
